eks/k8s/bookings-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings-microservice
  labels:
    app: bookings-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookings-microservice
  template:
    metadata:
      labels:
        app: bookings-microservice
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: bookings-microservice
        image: $ECR_PREFIX-bookings-microservice:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: bookings-microservice
  labels:
    app: bookings-microservice
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: bookings-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
