eks/k8s/data-producer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-producer
  namespace: default
  labels:
    app: data-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-producer
  template:
    metadata:
      labels:
        app: data-producer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: data-producer
        image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$PROJECT_ID-data-producer:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: data-producer
  namespace: default
  labels:
    app: data-producer
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: data-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
