eks/k8s/users-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab-utopia-users
  namespace: default
  labels:
    app: ab-utopia-users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ab-utopia-users
  template:
    metadata:
      labels:
        app: ab-utopia-users
      annotations:
        fluentbit.io/parser: spring
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: users-microservice
        image: $ECR_PREFIX-users-microservice:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ab-utopia-users
  namespace: default
  labels:
    app: ab-utopia-users
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: ab-utopia-users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
