eks/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utopia-ingress
  namespace: default
  labels:
    app: utopia-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: $ACM_CERT_ARN
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    external-dns.alpha.kubernetes.io/ttl: "60"
    external-dns.alpha.kubernetes.io/hostname: $DOMAIN
spec:
  tls:
  - hosts:
    - $DOMAIN
  rules:
  - host: $DOMAIN
    http:
      paths:

        # This first path should perform an ssl-redirect as below
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              # Configured via the redirect settings in the annotations
              port:
                name: use-annotation

        - path: /data-producer
          pathType: Prefix
          backend:
            service:
              name: data-producer
              port:
                number: 80
        - path: /api/airplanes
          pathType: Prefix
          backend:
            service:
              name: flights-microservice
              port:
                number: 80
        - path: /api/airplane-types
          pathType: Prefix
          backend:
            service:
              name: flights-microservice
              port:
                number: 80
        - path: /api/airports
          pathType: Prefix
          backend:
            service:
              name: flights-microservice
              port:
                number: 80
        - path: /api/flights
          pathType: Prefix
          backend:
            service:
              name: flights-microservice
              port:
                number: 80
        - path: /api/routes
          pathType: Prefix
          backend:
            service:
              name: flights-microservice
              port:
                number: 80
        - path: /api/bookings
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/booking-agents
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/booking-users
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/booking-guests
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/booking-payments
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/passengers
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/flight-bookings
          pathType: Prefix
          backend:
            service:
              name: bookings-microservice
              port:
                number: 80
        - path: /api/login
          pathType: Prefix
          backend:
            service:
              name: users-microservice
              port:
                number: 80
        - path: /api/users
          pathType: Prefix
          backend:
            service:
              name: users-microservice
              port:
                number: 80
        - path: /api/user-roles
          pathType: Prefix
          backend:
            service:
              name: users-microservice
              port:
                number: 80
